--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-# Customer Segmentation Project Dependencies
-# Python 3.8+ required
+# Customer Segmentation Project Requirements
+# Python 3.8+
 
-# Core Data Science
+# Core Data Science Libraries
 pandas>=1.3.0
 numpy>=1.21.0
 
 # Machine Learning
 scikit-learn>=1.0.0
 
-# Visualization
+# Data Visualization
 matplotlib>=3.4.0
 seaborn>=0.11.0
 
@@ -17,11 +17,8 @@ jupyter>=1.0.0
 notebook>=6.4.0
 ipykernel>=6.0.0
 
-# Optional: Kaggle dataset download
+# Optional: Kaggle Dataset Download
 kagglehub>=0.1.0
 
-# Optional: Interactive visualizations
-plotly>=5.0.0
-
-# Optional: Progress bars
-tqdm>=4.62.0
+# Additional Utilities
+openpyxl>=3.0.0  # Excel file support (if needed)
